Remove unused spdb configurations